[project]
name = "quanting-geeks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-trade-api>=3.2.0",
    "finnhub-python>=2.4.25",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.1.1",
    "py-vollib>=1.0.1",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
    "yfinance>=0.2.58",
]
